module.exports={
    welcome:'welcome',
    fakeButton:'fake button',
    buttonText:'button text',
    buttonTextOk:'button text ok',
    buttonTextNotOk:'button text not ok',
    textInput:'text input',
    counterButton:'counter button',
    counterButtonText:'counter text',
    flatList:'flatList'
}