...
            onPress={() => setActive(!active)}>
            <Text testID={TestIds.buttonText}>
              {active ? TestIds.buttonTextOk : TestIds.buttonTextNotOk}
            </Text>
          </TouchableOpacity>
          <TextInput returnKeyType="done" testID={TestIds.textInput} />
          <Text testID='fuck'>{counter}</Text>
          <Button
            testID={TestIds.counterButton}
            title="coun up"
            onPress={() => setCounter(counter + 1)}
          />
         
...
